[package]
name = "marshallku_blog_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.10.1", features = ["cookie"] }
bcrypt = "0.17.0"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = "0.4.41"
cookie = "0.18.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
hmac = "0.12.1"
http-body-util = "0.1.3"
jwt = "0.16.0"
log = "0.4.27"
mongodb = "3.2.3"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
time = "0.3.41"
tokio = { version = "1.45.1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
